--- a/Risk_Aaron/.gitignore
+++ b/Risk_Aaron/.gitignore
@@ -1,6 +1,8 @@
-*.pyc 
-*.xml
-*cpython*
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.pyc
+*.py[cod]
+*$py.class
 
 # C extensions
 *.so
@@ -11,7 +13,17 @@ build/
 develop-eggs/
 dist/
 downloads/
-.idea/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 MANIFEST
 
 # PyInstaller
@@ -19,7 +31,6 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
 
 # Installer logs
 pip-log.txt
@@ -92,5 +103,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-
